updateTimelines now returns a new Set; bug fixes